[gd_scene load_steps=7 format=3 uid="uid://cmsdcvnfuww4x"]

[ext_resource type="Theme" uid="uid://danre0tbddxgh" path="res://Sprites/global_theme.tres" id="1_3jhn1"]
[ext_resource type="Script" path="res://Scripts/title.gd" id="2_k24jl"]
[ext_resource type="Texture2D" uid="uid://bhy67l0mrje6i" path="res://Sprites/Desktop_Background.png" id="3_vrnaj"]
[ext_resource type="Script" path="res://Scripts/size_change_detector.gd" id="4_4h0ed"]
[ext_resource type="Texture2D" uid="uid://cxui71anbt0rk" path="res://Sprites/Mouse Icons/Size1/Prohibited.png" id="5_loxe6"]
[ext_resource type="Texture2D" uid="uid://6t33p8yg2el2" path="res://Sprites/immersive_card.png" id="6_3d76f"]

[node name="TItle" type="Control" node_paths=PackedStringArray("size_change", "settings_panel")]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_3jhn1")
script = ExtResource("2_k24jl")
size_change = NodePath("Size_Change")
settings_panel = NodePath("SettingsPanel")

[node name="DesktopBackground" type="Sprite2D" parent="."]
position = Vector2(160, 80)
scale = Vector2(2, 2)
texture = ExtResource("3_vrnaj")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Nosy Rabbits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 60.0
offset_right = 190.0
offset_bottom = 80.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Start"

[node name="Size_Change" type="Node2D" parent="."]
script = ExtResource("4_4h0ed")

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 90.0
offset_right = 190.0
offset_bottom = 110.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Settings"

[node name="SettingsPanel" type="Panel" parent="."]
self_modulate = Color(0.585488, 0.326266, 0.56081, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 150.0

[node name="Label" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 39.0
offset_top = 32.0
offset_right = 79.0
offset_bottom = 41.6667
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Volume"

[node name="ImmersiveCard" type="Sprite2D" parent="SettingsPanel"]
position = Vector2(272, 36)
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_3d76f")

[node name="Exit_Button" type="TextureButton" parent="SettingsPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
texture_normal = ExtResource("5_loxe6")
texture_pressed = ExtResource("5_loxe6")
texture_hover = ExtResource("5_loxe6")
texture_disabled = ExtResource("5_loxe6")
texture_focused = ExtResource("5_loxe6")

[node name="HSlider" type="HSlider" parent="SettingsPanel"]
layout_mode = 0
offset_left = 34.0
offset_top = 44.0
offset_right = 175.0
offset_bottom = 60.0
min_value = -16.0
max_value = 16.0

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SettingsPanel/Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="SettingsPanel/HSlider" to="." method="_on_h_slider_value_changed"]
